--- a/index.html
+++ b/index.html
@@ -83,10 +83,29 @@
                    <div class="content-data">
 
 <h1>
-    <img src="https://raw.githubusercontent.com/alexander-kiriliuk/k-platform-core/master/guide/res/kp-logo.png" alt="logo" height="20"/> K-Platform client
+    <img src="https://github.com/alexander-kiriliuk/k-platform-client/tree/master/guide/res/kp-logo.png" alt="logo" height="20"/> K-Platform client
 </h1>
 
 <p><strong>This is a client application, which is an administrative panel for managing a platform-based system <a href="https://github.com/alexander-kiriliuk/k-platform-core">@k-platform</a>.</strong></p>
+<h2>Documentation</h2>
+<p>Please navigate to <a href="guide">guides folder</a> for read detailed documentations of application and also visit <a href="https://alexander-kiriliuk.github.io/k-platform-client">codebase documentations website</a></p>
+<h2>Fast start</h2>
+<p>After you have installed and successfully launched the <a href="https://github.com/alexander-kiriliuk/k-platform-core">backend of the platform</a>, you can proceed with the installation of the platform client. </p>
+<ul>
+<li>Run <code>npm i</code> command for install all dependencies</li>
+<li>Run <code>npm run start:example:admin</code> for serve the example admin-application</li>
+</ul>
+<blockquote>
+<p>The default settings are in the <code>examples/admin/src/app/env/env.ts</code> file, you can change them if you wish.</p>
+</blockquote>
+<h3>Based on</h3>
+<a target="_blank" href="https://angular.dev" rel="nofollow">
+    <img height="30" title="Angular" src="https://github.com/alexander-kiriliuk/k-platform-client/tree/master/guide/res/angular-logo.svg"/>
+</a>
+&nbsp; &nbsp; &nbsp; &nbsp;
+<a target="_blank" href="https://primeng.org" rel="nofollow">
+    <img height="30" title="primeng" src="https://github.com/alexander-kiriliuk/k-platform-client/tree/master/guide/res/primeng-logo.svg"/> 
+</a>
 
 
 
