deploy: ef3bf37b4b7fb35592fde04776b31747b81d4ac9

--- a/coverage.html
+++ b/coverage.html
@@ -1201,6 +1201,30 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./injectables/ExplorerSectionViewModel.html">lib/src/components/explorer/src/section/explorer-section-view-model.service.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>ExplorerSectionViewModel</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/29)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/ExplorerSectionComponent.html">lib/src/components/explorer/src/section/explorer-section.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>ExplorerSectionComponent</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/5)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./components/SectionFilterDialogComponent.html">lib/src/components/explorer/src/section/filter/section-filter-dialog.component.ts</a>
             </td>
             <td>component</td>
@@ -1268,30 +1292,6 @@
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/4)</span>
-            </td>
-        </tr>
-        <tr class="low">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./components/SectionComponent.html">lib/src/components/explorer/src/section/section.component.ts</a>
-            </td>
-            <td>component</td>
-            <td>SectionComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/5)</span>
-            </td>
-        </tr>
-        <tr class="low">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./injectables/SectionViewModel.html">lib/src/components/explorer/src/section/section.view-model.ts</a>
-            </td>
-            <td>injectable</td>
-            <td>SectionViewModel</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/29)</span>
             </td>
         </tr>
         <tr class="low">
@@ -1627,7 +1627,7 @@
             <td>CurrentUser</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/10)</span>
+                <span class="coverage-count">(0/9)</span>
             </td>
         </tr>
         <tr class="low">
