deploy: 2ca0140a08312f4470d05a3b098246ada9c27b06

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 <p><strong>This is a client application, which is an administrative panel for managing a platform-based system <a href="https://github.com/alexander-kiriliuk/k-platform-core">@k-platform</a>.</strong></p>
 <h2>Documentation</h2>
-<p>This application is fully customisable and easily extensible. Please navigate to <a href="(https://github.com/alexander-kiriliuk/k-platform-client/tree/master/guide/index.md">guides folder</a> for read detailed documentations of application and also visit <a href="https://alexander-kiriliuk.github.io/k-platform-client">codebase documentations website</a>.</p>
+<p>This application is fully customisable and easily extensible. Please navigate to <a href="https://github.com/alexander-kiriliuk/k-platform-client/tree/master/guide/index.md">guides folder</a> for read detailed documentations of application and also visit <a href="https://alexander-kiriliuk.github.io/k-platform-client">codebase documentations website</a>.</p>
 <h2>Fast start</h2>
 <p>After you have installed and successfully launched the <a href="https://github.com/alexander-kiriliuk/k-platform-core">backend of the platform</a>, you can proceed with the installation of the platform client. </p>
 <ul>
